--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,11 @@
+server.port=${PORT:8080}
+logging.level.org.atmosphere = warn
+spring.mustache.check-template-location = false
+
+vaadin.launch-browser=true
+vaadin.whitelisted-packages = com.vaadin,org.vaadin,dev.hilla,com.example.application
+spring.jpa.defer-datasource-initialization = true
+
 
 spring.datasource.url=jdbc:mysql://localhost/transfermarkt2_db
 spring.datasource.username=root
